infer/tests/codetoanalyze/objc/errors/field_superclass/B.h
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */


#import "A.h"

@interface B : A

@end
